<resources>
    <string name="app_name">TapBand</string>
    <string name="none">""</string>
    <string name="Menu">"Menu"</string>
    <string name="Help">"Help"</string>
    <string name="Save">"Save Recording"</string>
    <string name="Back">"Back"</string>
    <string name="Help_Menu">"Help Menu"</string>



    <!-- Resource for the help screen text element. -->
    <string name="Help_Text1">" 1.  Switch Instrument: Press this button to change to different instruments.\n"
...
